Started work on adding Sqlite Database. Also, added new models.

--- a/C971/C971/Views/TermPage.xaml
+++ b/C971/C971/Views/TermPage.xaml
@@ -7,7 +7,7 @@
              x:Class="C971.Views.TermPage"
              Title="Terms">
     <ContentPage.ToolbarItems>
-        <ToolbarItem Text="Add" Clicked="Add_Clicked"/>
+        <ToolbarItem Text="Add"/>
     </ContentPage.ToolbarItems>
 
     <ListView x:Name="MyListView"
