Added SQLite DB and a C971DB class that has has data manipulation methods. Also, added save, add, delete, cancel clicked methods to all the relevant pages.

--- a/C971/C971/Views/AddEditCoursePage.xaml
+++ b/C971/C971/Views/AddEditCoursePage.xaml
@@ -8,15 +8,9 @@
              Title="{Binding AddOrEdit}">
 
     <ContentPage.ToolbarItems>
-        <ToolbarItem Text="Cancel"/>
-        <ToolbarItem Text="Save"/>
+        <ToolbarItem Text="Cancel" Clicked="Cancel_Clicked"/>
+        <ToolbarItem Text="Save" Clicked="Save_Clicked"/>
     </ContentPage.ToolbarItems>
-
-    <!--<ContentPage.ToolbarItems>
-        <ToolbarItem Text="Add" Clicked="Add_Clicked"/>
-        <ToolbarItem Text="Delete" Clicked="Delete_Clicked"/>
-        <ToolbarItem Text="Edit" Clicked="Edit_Clicked"/>
-    </ContentPage.ToolbarItems>-->
 
     <ContentPage.Content>
         <StackLayout Spacing="20" Padding="15">
