--- a/C971/C971/Views/AssessmentPage.xaml
+++ b/C971/C971/Views/AssessmentPage.xaml
@@ -8,8 +8,8 @@
              Title="Change l8r Assessments">
 
     <ContentPage.ToolbarItems>
-        <ToolbarItem Text="Cancel"/>
-        <ToolbarItem Text="Save"/>
+        <ToolbarItem Text="Cancel" Clicked="Cancel_Clicked"/>
+        <ToolbarItem Text="Save" Clicked="Save_Clicked"/>
     </ContentPage.ToolbarItems>
 
     <ContentPage.Content>
