--- a/C971/C971/Views/CourseDetailPage.xaml
+++ b/C971/C971/Views/CourseDetailPage.xaml
@@ -8,46 +8,65 @@
              Title="Course Details">
 
     <ContentPage.ToolbarItems>
-        <ToolbarItem Text="Delete"/>
-        <ToolbarItem Text="Edit"/>
+        <ToolbarItem Text="Delete" Clicked="Delete_Clicked"/>
+        <ToolbarItem Text="Edit" Clicked="Edit_Clicked"/>
     </ContentPage.ToolbarItems>
 
-    <ListView x:Name="MyListView"
-            ItemsSource="{Binding Items}"
-            ItemTapped="Handle_ItemTapped"
-            CachingStrategy="RecycleElement">
-        <d:ListView.ItemsSource>
-            <x:Array Type="{x:Type x:String}">
-                <x:String>Item 1</x:String>
-                <x:String>Item 2</x:String>
-                <x:String>Item 3</x:String>
-                <x:String>Item 4</x:String>
-                <x:String>Item 5</x:String>
-            </x:Array>
-        </d:ListView.ItemsSource>
-        <!--Built in Cells-->
-        <ListView.ItemTemplate>
-            <DataTemplate>
-                <TextCell Text="{Binding .}" d:Text="{Binding .}" />
-            </DataTemplate>
-        </ListView.ItemTemplate>
-
-        <!--Custom View Cells-->
-        <!--
-    <ListView.ItemTemplate>
-      <DataTemplate>
-        <ViewCell>
-          <StackLayout>
-            <Label Text="{Binding Text}" 
-                   d:Text="{Binding .}"
-                   Style="{DynamicResource ListItemTextStyle}" />
-            <Label Text="{Binding Detail}" 
-                   d:Text="Detail"
-                   Style="{DynamicResource ListItemDetailTextStyle}"/>
-          </StackLayout>
-        </ViewCell>
-      </DataTemplate>
-    </ListView.ItemTemplate>
-    -->
-    </ListView>
+    <ContentPage.Content>
+        <StackLayout>
+            <TableView Margin="10,30,10,0">
+                <TableSection  x:Name="CourseTable">
+                    <ViewCell>
+                        <StackLayout Orientation="Horizontal" VerticalOptions="Center" Padding="13, 0">
+                            <Label Text="Status:" />
+                            <Label x:Name="Status"/>
+                        </StackLayout>
+                    </ViewCell>
+                    <ViewCell>
+                        <StackLayout Orientation="Horizontal"  VerticalOptions="Center" Padding="13, 0">
+                            <Label Text="Start Date:" />
+                            <Label x:Name="StartDate"/>
+                        </StackLayout>
+                    </ViewCell>
+                    <ViewCell>
+                        <StackLayout Orientation="Horizontal"  VerticalOptions="Center" Padding="13, 0">
+                            <Label Text="End Date:" />
+                            <Label x:Name="EndDate"/>
+                        </StackLayout>
+                    </ViewCell>
+                    <ViewCell>
+                        <StackLayout Orientation="Horizontal"  VerticalOptions="Center" Padding="13, 0">
+                            <Label Text="Instructor Name:" />
+                            <Label x:Name="InstructorName"/>
+                        </StackLayout>
+                    </ViewCell>
+                    <ViewCell>
+                        <StackLayout Orientation="Horizontal"  VerticalOptions="Center" Padding="13, 0">
+                            <Label Text="Instructor Phone:" />
+                            <Label x:Name="InstructorPhone"/>
+                        </StackLayout>
+                    </ViewCell>
+                    <ViewCell>
+                        <StackLayout Orientation="Horizontal"  VerticalOptions="Center" Padding="13, 0">
+                            <Label Text="Instructor Email:" />
+                            <Label x:Name="InstructorEmail"/>
+                        </StackLayout>
+                    </ViewCell>
+                    <ViewCell>
+                        <StackLayout Orientation="Horizontal"  VerticalOptions="Center" Padding="13, 0">
+                            <Label Text="Notifications Enabled:" />
+                            <Label x:Name="NotificationsEnabled"/>
+                        </StackLayout>
+                    </ViewCell>
+                    <ViewCell>
+                        <StackLayout Orientation="Horizontal"  VerticalOptions="Center" Padding="13, 0">
+                            <Label Text="Notes:" HorizontalOptions="FillAndExpand"  VerticalOptions="Center" />
+                            <Label x:Name="Notes" HorizontalOptions="FillAndExpand"  VerticalOptions="Center"/>
+                            <Button Text="Share" x:Name="ShareButton" HorizontalOptions="End" BackgroundColor="Transparent" TextColor="Blue" HeightRequest="50" WidthRequest="60" FontSize="Micro" Clicked="ShareButton_Clicked"/>
+                        </StackLayout>
+                    </ViewCell>
+                </TableSection>
+            </TableView>
+        </StackLayout>
+    </ContentPage.Content>
 </ContentPage>
